<resources>
    <string name="app_name">Weather application</string>
    <string name="ButtonText">Load data</string>
    <string name="BottomText">Current weather in Odessa</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonChooseCity">Choose city</string>
    <string name="weatherUpdate">Weather info has been updated</string>
    <string name="windSpeed">m/s</string>
    <string name="noData">No data loaded</string>
    <string name="tempC" translatable="false">U+2103 C</string>
    <string name="streetView">Street View</string>
    <string name="GPS" translatable="false">GPS</string>
    <string name="imgSun" translatable="false">Sun image</string>
    <string name="imgWind" translatable="false">Wind image</string>
    <string name="imgWindRose" translatable="false">Wind rose</string>
    <string name="selectedCoords">"Selected coordinates: "</string>
    <string name="currentCoords">"Device coordinates: "</string>
</resources>
