<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="267dp"
        android:layout_height="260dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/imgSun"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/windRose"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/roza"
        android:contentDescription="@string/imgWindRose"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transparent" />

    <ImageView
        android:id="@+id/windImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/imgWind"
        android:cropToPadding="false"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transparent" />

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#0C2451F8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/BottomText" />

    <Button
        android:id="@+id/buttonLoadData"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="btnLoadWeatherData"
        android:padding="1dp"
        android:text="@string/ButtonText"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonChooseCity"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/ButtonText" />

    <Button
        android:id="@+id/buttonGPS"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="btnCurrentGPSCoordinates"
        android:padding="1dp"
        android:text="@string/GPS"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonStreetView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonChooseCity"
        tools:text="@string/GPS" />

    <Button
        android:id="@+id/buttonChooseCity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="btnMapOpen"
        android:padding="1dp"
        android:text="@string/buttonChooseCity"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonGPS"
        app:layout_constraintStart_toEndOf="@+id/buttonLoadData"
        tools:text="@string/buttonChooseCity" />

    <Button
        android:id="@+id/buttonStreetView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="btnStreetView"
        android:padding="1dp"
        android:text="@string/streetView"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGPS"
        tools:text="@string/streetView" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/windImage"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/windImage"
        app:layout_constraintTop_toBottomOf="@+id/windImage" />

    <TextView
        android:id="@+id/windTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/windImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/windTextView"
        app:layout_constraintTop_toBottomOf="@+id/windImage" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/windImage"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="@+id/windImage"
        app:layout_constraintTop_toBottomOf="@+id/windTextView2" />

</android.support.constraint.ConstraintLayout>